frame/support/test/tests/construct_runtime_ui/no_part.stderr
error: Cannot find part `Module` nor `Pallet`, one must be defined
 --> $DIR/no_part.rs:9:3
  |
9 |         System: system::{},
  |         ^^^^^^
